[package]
name = "kutsu"
version = "0.1.0"
edition = "2021"
description = "Outbound SIP calling MCP server, bridging real phone calls to Gemini Live"
license = "MIT"

[lib]
name = "kutsu"
path = "src/lib.rs"

[[bin]]
name = "kutsu"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rmcp = { version = "2.1", features = ["server", "transport-io", "transport-streamable-http-server", "macros"] }
schemars = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "net", "signal"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tokio-util = "0.7"
axum = "0.8"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
chrono = { version = "0.4", features = ["serde"] }
ezk-sip-ua = "0.9"
# Requires a system OpenSSL (ezk-rtc -> ezk-srtp needs it for SRTP). On
# Windows, install via vcpkg (`vcpkg install openssl:x64-windows-static-md`
# + set VCPKG_ROOT) or use the `vendor-openssl` feature instead, which needs
# perl + nasm on PATH to build OpenSSL from source. See README.
ezk-rtc = "0.0.1"

[dev-dependencies]
tempfile = "3"
